@@ -59,7 +59,6 @@ private slots:
 	void activateDvbTab();
 	void activateTab(int tabIndex);
 	void hideCursor();
-	void checkScreenSaver();
 
 private:
 	enum TabIndex {
